--- a/WebSite-web/src/main/resources/static/sa-html/user/user-add.html
+++ b/WebSite-web/src/main/resources/static/sa-html/user/user-add.html
@@ -65,7 +65,7 @@
             // ok
             ok: function (pageNo) {
                 this.$message('数据添加, 参数：' + JSON.stringify(this.user));
-                sa.post("/user", this.user, function (res) {
+                sa.post("/user", JSON.stringify(this.user), function (res) {
                     if (res && res.state && res.data) {
                         layer.alert('添加成功', {}, function () {
                             let curr_index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
