--- a/WebSite-web/src/main/resources/static/index.html
+++ b/WebSite-web/src/main/resources/static/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
 	<title></title>
 	<meta charset="utf-8">
@@ -8,8 +7,8 @@
 	      name="viewport"/>
 	<link href="https://cdn.bootcss.com/element-ui/2.12.0/theme-chalk/index.css" rel="stylesheet">
 	<link href="https://cdn.bootcss.com/Swiper/4.5.1/css/swiper.min.css" rel="stylesheet">
-	<link href="sa-resources/index.css" rel="stylesheet">
-	<link href="sa-resources/theme.css" rel="stylesheet">
+	<link href="/sa-resources/index.css" rel="stylesheet" type="text/css">
+	<link href="/sa-resources/theme.css" rel="stylesheet" type="text/css">
 
 
 </head>
@@ -231,11 +230,11 @@
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
 
-<script src="sa-resources/admin-util.js"></script>
+<script src="/sa-resources/admin-util.js"></script>
 <script src="/res/sa.js"></script>
-<script src="sa-resources/menu-list.js"></script>
-<script src="sa-resources/index.js"></script>
-<script src="sa-resources/my-code.js"></script>
+<script src="/sa-resources/menu-list.js"></script>
+<script src="/sa-resources/index.js"></script>
+<script src="/sa-resources/my-code.js"></script>
 
 
 </body>
